# kinnect_mapper

./: CMakeLists.txt  README.md  duas-kinects.launch  kinect_mapper_rviz_config.rviz  kinnect_mapper_log.launch  kinnect_mapper_playback.launch  kmapper.launch  kmapper.rviz  package.xml
doc/: how-install-pioneer.txt  how-to-install-kinect.txt  how-to-run-2d-mapping-with-kinect.txt  how-to-run-gmapping-with-kinect.txt  how-to-run-gmapping.txt
scripts/: kinect_tf.py  simple_tf_broadcaster.py
src/: KinectToLaserAdapter.cpp  KinectToLaserAdapter.h  LinearAlgebraUtils.cpp  LinearAlgebraUtils.h  kinect_mapper.cpp
